src/tests/snapshots/niri__tests__window_opening__check_target_size@dwF1000-dhP0.5-b-t.snap
---
source: src/tests/window_opening.rs
description: "default column width: F1000\ndefault window height: P0.5\nborder on\ntabbed"
expression: snapshot
---
initial configure:
size: 1000 × 328, bounds: 1231 × 680, states: []

post-map configures:
size: 1000 × 328, bounds: 1231 × 680, states: [Activated]
